--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,12 @@ jar {
     }
 }
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 dependencies {
     compile 'com.google.guava:guava:17.0'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile 'org.mockito:mockito-all:1.9.5'
+//    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 task wrapper(type: Wrapper) {
