--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,20 @@ repositories {
     mavenCentral()
 }
 
-
 sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'gorkana-v1', 'Implementation-Version': version
+        attributes 'Implementation-Title': 'gorkana-v1', 'Implementation-Version': version, 'Main-Class':"exam.Calculator"
+
     }
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+
 dependencies {
     compile 'com.google.guava:guava:17.0'
-//    testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
