--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
@@ -8,9 +9,11 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 version = '1.0'
+
+mainClassName = "exam.Calculator"
 jar {
     manifest {
-        attributes 'Implementation-Title': 'gorkana-v1', 'Implementation-Version': version, 'Main-Class':"exam.Calculator"
+        attributes 'Implementation-Title': 'gorkana-v1', 'Implementation-Version': version
 
     }
 }
@@ -23,4 +26,11 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
+}
+
+
+run {
+    if ( project.hasProperty("appArgs") ) {
+        args Eval.me(appArgs)
+    }
 }
